--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
     <!--<div class="hidden-xs"><div class="work-together" id="contact">LETS WORK TOGETHER</div></div>-->
-    <div class="section" id="contact"><h1>Let&apos;s Work Together</h1><hr></div>
+    <!--<div class="section" id="contact"><h1>Let&apos;s Work Together</h1><hr></div>-->
 
     <div class="work-together">
       <div class="container">
