--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>Computer Science (MSc)</h1>
         <div class="spacer"></div>
         <hr><hr>
-        <h2 class="text-center">Some tacky sentence about my love of ML?</h2>
+        <h2 class="text-center">This site is not finished!</h2>
       </div>
     </div>
 
